--- a/css/index_style.css
+++ b/css/index_style.css
@@ -13,7 +13,7 @@ body {
   line-height: 2;
   font-family: Raleway, "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
   /* >>TODO */
-  background-color: #dc143c;
+  background-color: rgb(242, 242, 242);
 }
 
 *,
@@ -26,9 +26,24 @@ body {
 /* --------------------------------
  * parts
  * -------------------------------- */
+
 .heading {
   margin: 80px 0 10px;
   font-size: 4.0rem;
+}
+
+.catch{
+  display: flex;
+}
+
+.catch .heading{
+padding: 0% 20% 0% 13%;
+}
+
+.catch img{
+  width: 10%;
+  object-fit: cover;
+  margin: 50px;
 }
 
 .topic {
@@ -57,7 +72,7 @@ body {
   padding: 10px 10px;
   display: flex;/* 子要素をflexboxで揃える */
   align-items: center;  /* 子要素をflexboxにより中央に配置する */
-  background-color: #fff;
+  background-color: rgb(178, 178, 178);
   box-shadow: 0 0 10px 1px #858360;
 
 }
@@ -129,7 +144,7 @@ body {
   border-radius: 10px;
   line-height: 2;
   vertical-align: middle;
-  background-color: #fff;
+  background-color: rgb(221, 221, 221);
   box-shadow: 0px 5px 10px 0px  #858360;
 }
 
@@ -169,7 +184,7 @@ body {
   margin: 2%;
   border: solid 1px #666;
   border-radius: 10px;
-  background-color: #fff;
+  background-color: rgb(221, 221, 221);
   box-shadow: 0px 5px 10px 0px  #858360; 
 }
 
@@ -196,7 +211,7 @@ body {
   margin: 10px;
   border: solid 1px #666;
   border-radius: 10px;
-  background-color: #fff;
+  background-color: rgb(221, 221, 221);
   box-shadow: 0px 5px 10px 0px  #858360; 
 }
 
@@ -217,7 +232,7 @@ body {
   text-align: left;
   border-radius: 10px;
   border: solid 1px #666;
-  background-color: #fff;
+  background-color: rgb(221, 221, 221);
   box-shadow: 0px 5px 10px 0px  #858360;
 }
 
@@ -238,7 +253,7 @@ body {
   border: solid 1px;
   border-radius: 10px;
   color: #666;
-  background-color: #fff;
+  background-color: rgb(221, 221, 221);
   text-decoration: none;
 }
 
@@ -258,6 +273,7 @@ body {
 @media (max-width: 768px) {
   body {
     font-size: 1rem;
+
   }
 
   .heading {
